# respi-net

./: .gitignore  ESP_IDF_GUIDE.md  README.md  example.py  kicad_error.txt  kicad_log.txt  package.json  prezentacja.tex  pyproject.toml  radar_raw_2026-03-13_18-36-25.csv  radar_raw_2026-03-13_18-39-19.csv  radar_raw_2026-03-13_18-45-31.csv  radar_raw_2026-03-13_18-49-43.csv  radar_raw_2026-03-13_18-56-40.csv  radar_raw_2026-03-13_19-26-07.csv  radar_raw_2026-03-13_20-02-42.csv  radar_raw_2026-03-13_20-06-15.csv  radar_raw_2026-03-13_20-28-50.csv  radar_raw_2026-03-13_20-29-51.csv  radar_raw_2026-03-13_20-31-27.csv  radar_raw_2026-03-13_20-34-18.csv  radar_raw_2026-03-13_20-35-13.csv  radar_raw_2026-03-13_20-44-41.csv  radar_raw_2026-03-13_20-46-19.csv  radar_raw_2026-03-13_20-47-05.csv  radar_raw_2026-03-13_20-48-38.csv  radar_raw_2026-03-13_20-51-16.csv  radar_raw_2026-03-13_20-55-04.csv  radar_raw_2026-03-13_20-57-14.csv  radar_raw_2026-03-13_21-08-31.csv  radar_raw_2026-03-13_21-09-57.csv  radar_raw_2026-03-13_21-11-19.csv  radar_raw_2026-03-13_21-15-47.csv  radar_raw_2026-03-13_21-18-51.csv  radar_raw_2026-03-13_21-24-58.csv  radar_raw_2026-03-13_22-00-57.csv  radar_raw_2026-03-13_22-20-19.csv  radar_raw_2026-03-13_22-24-01.csv  radar_raw_2026-03-13_22-31-19.csv  radar_raw_2026-03-15_14-40-12.csv  (+14 more)
docs/: APP_AND_CLI.md
esp32_imu_stream/: sdkconfig  sdkconfig.defaults
esp32_radar_adc/: build.ps1
firmware/: accelerometer_test.ino
hardware/: esp32_imu.kicad_sch  hb100_calibrated_schematic.py
schematics/: esp32_imu_schematic.kicad_sch  schematics.kicad_sch
(+57 files in other folders)
