[project]
name = "respi-net"
version = "0.1.0"
description = "Respiratory signal capture and analysis tools for IMU and HB100 radar data."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "matplotlib>=3.8",
    "numpy>=1.26",
    "pandas>=2.2",
    "pyserial>=3.5",
    "scipy>=1.12",
]

[project.scripts]
respi = "respi_net.cli:cli"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
