[project]
name = "respi-net"
version = "0.1.0"
description = "Respiratory signal capture and analysis tools for IMU, HB100 radar, and Acconeer A121 data."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "matplotlib>=3.8",
    "numpy>=1.26",
    "pandas>=2.2",
    "pyqtgraph>=0.13.7",
    "PySide6>=6.7",
    "pyserial>=3.5",
    "scipy>=1.12",
    "schemdraw>=0.23",
    "acconeer-exptool[app]>=7.18.1",
]

[project.scripts]
respi = "respi_net.cli:cli"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
